--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title>Earthquake Map</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +18,7 @@
 </head>
 
 <body>
-
+  <h1 id="title">Earthquake and Tectonic Plates Map</h1>
   <!-- The div that holds our map -->
   <div id="map"></div>
 
